@@ -22,11 +22,11 @@ R.home <- function(component="home")
            "bin" = if(.Platform$OS.type == "windows" &&
                       nzchar(p <- .Platform$r_arch)) file.path(rh, component, p)
            else file.path(rh, component),
-           "share" = if(nzchar(p <- as.vector(Sys.getenv("R_SHARE_DIR")))) p
+           "share" = if(nzchar(p <- Sys.getenv("R_SHARE_DIR", names = FALSE))) p
            else file.path(rh, component),
-	   "doc" = if(nzchar(p <- as.vector(Sys.getenv("R_DOC_DIR")))) p
+	   "doc" = if(nzchar(p <- Sys.getenv("R_DOC_DIR", names = FALSE))) p
            else file.path(rh, component),
-           "include" = if(nzchar(p <- as.vector(Sys.getenv("R_INCLUDE_DIR")))) p
+           "include" = if(nzchar(p <- Sys.getenv("R_INCLUDE_DIR", names = FALSE))) p
            else file.path(rh, component),
            "modules" = if(nzchar(p <- .Platform$r_arch)) file.path(rh, component, p)
            else file.path(rh, component),
