@@ -19,8 +19,8 @@ invisible(.libPaths(c(unlist(strsplit(Sys.getenv("R_LIBS"), ";")),
                       unlist(strsplit(Sys.getenv("R_LIBS_USER"), ";"))
                       )))
 
-if(nzchar(Sys.getenv("R_PAPERSIZE"))) {
-    options(papersize = as.vector(Sys.getenv("R_PAPERSIZE")))
+if(nzchar(Sys.getenv("R_PAPERSIZE", names = FALSE))) {
+    options(papersize = Sys.getenv("R_PAPERSIZE", names = FALSE)))
 } else {
     if(length(grep("united.states", Sys.getlocale("LC_MONETARY"), TRUE)) ||
        length(grep("canada", Sys.getlocale("LC_MONETARY"), TRUE)))
@@ -30,16 +30,15 @@ if(nzchar(Sys.getenv("R_PAPERSIZE"))) {
 
 options(pager = if(length(grep("--ess", commandArgs()))) "console" else "internal",
         useFancyQuotes = (.Platform$GUI == "Rgui"),
-        pdfviewer = as.vector(Sys.getenv("R_PDFVIEWER",
-                                          file.path(R.home("bin"), "open.exe"))))
+        pdfviewer = Sys.getenv("R_PDFVIEWER", file.path(R.home("bin"), "open.exe"), names = FALSE))
 
 if(.Platform$GUI == "Rgui") {
-    Sys.setenv(GFORTRAN_STDOUT_UNIT= "-1")
-    Sys.setenv(GFORTRAN_STDERR_UNIT= "-1")
+    Sys.setenv(GFORTRAN_STDOUT_UNIT = "-1")
+    Sys.setenv(GFORTRAN_STDERR_UNIT = "-1")
 }
 
 local({
-    br <- as.vector(Sys.getenv("R_BROWSER", NA))
+    br <- Sys.getenv("R_BROWSER", NA, names = FALSE)
     if(!is.na(br)) options(browser = br)
     tests_startup <- Sys.getenv("R_TESTS")
     if(nzchar(tests_startup)) source(tests_startup)
